Bug 55289 - FILEOPEN .docx document crashes LibreOffice
Summary: FILEOPEN .docx document crashes LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta3
Hardware: All All
: medium major
Assignee: Michael Stahl
URL:
Whiteboard: target:4.1.0 target:4.0.0.0.beta0 tar...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-09-24 19:42 UTC by Dave Richards
Modified: 2013-04-28 19:05 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Document that crashes LibreOffice (95.72 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2012-09-24 19:42 UTC, Dave Richards
Details
Bug 55289 crash log file, LibreOffice 3.6.3.1 on Mac OS X 10.6.8 (48.40 KB, text/plain)
2012-10-17 18:17 UTC, Roman Eisele
Details
bt + console logs on 3.6 (6.05 KB, text/plain)
2012-10-20 14:25 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dave Richards 2012-09-24 19:42:14 UTC
Created attachment 67646 [details]
Document that crashes LibreOffice

This document crashes LibreOffice 3.6.  However it seems as if LO 3.5 opens it, but not perfectly.    Document is very simple letterhead received from an outside source.

Tested only on Linux.
Comment 1 Roman Eisele 2012-10-17 18:17:47 UTC
Created attachment 68725 [details]
Bug 55289 crash log file, LibreOffice 3.6.3.1 on Mac OS X 10.6.8



Thank you very much for your bug report!

REPRODUCIBLE with LibreOffice 3.6.3.1 (Build ID: f8fce0b), German langpack installed, on Mac OS X 10.6.8 (Intel). Any attempt to open the file crashes LibreOffice; attached you find the log file created by Mac OS, including
a simple stack backtrace (w/o full symbols).

Changing Platform to “All”, because repr. on Linux and Mac OS X;
increasing importance.
Comment 2 Roman Eisele 2012-10-17 18:18:40 UTC
Status to NEW. Adding “regression” keyword, because on the same machine LibreOffice 3.5.7.1 opens the document without any problems.
Comment 3 Roman Eisele 2012-10-17 18:33:39 UTC
Further results:

still REPRODUCIBLE in the last 3.6.x daily build for Mac OS X:
LibreOffice/LOdev 3.6.4.0+ (build ID: 1bc1530; pull time: 2012-10-17 09:20:42)

But NOT reproducible with the last master builds, e.g. with
LOdev 3.7.0.0.alpha0+ (build ID: c252694; pull time: 2012-10-12 22:05:41)

So this bug is already fixed in the Master branch (3.7.x), but still reproducible in the 3.6.x branch.
Comment 4 Julien Nabet 2012-10-20 14:25:03 UTC
Created attachment 68853 [details]
bt + console logs on 3.6

On pc Debian x86-64 with master sources updated today I don't reproduce the problem.
But with 3.6 sources updated today too, I can reproduce it.
Attached console logs + bt.
Comment 5 Julien Nabet 2012-10-20 14:25:23 UTC
cedric: 1 for you?
Comment 6 Michael Stahl 2012-12-07 11:43:56 UTC
looks like a regression from bbbb10a0774b9da546557632cd09c4f6958f8939

... but then things get muddy.

one would assume that 5de61f7a4ddb502730454e4bf3232f7f4b4175e1
fixes the crash... but it doesn't because that's just the
anchor transition that happens on master, on libreoffice-3-6
we have a _different_ anchor transition!

but it can't hurt to backport that anyway.
Comment 7 Not Assigned 2012-12-07 11:49:28 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=01cd24df1ec7eaa53e9e2156d4d6890a7cc5996a

fdo#55289: fix crash in SwXShape::setPropertyValue:



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Not Assigned 2012-12-07 12:18:30 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=42a5936eb060e1850508b7402ca9fc5a238d713a&g=libreoffice-4-0

fdo#55289: fix crash in SwXShape::setPropertyValue:


It will be available in LibreOffice 4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Not Assigned 2012-12-07 13:00:33 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4273e1411fbcbad9159925ccadb2e78b3fa9c0e4&g=libreoffice-3-6

fdo#55289: fix crash in SwXShape::setPropertyValue:


It will be available in LibreOffice 3.6.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Joel Madero 2013-04-25 21:13:55 UTC
Updating version to : 
Version 3.6.0.0.beta3 as it is the earliest version where the bug was present

Tested on:
Bodhi Linux

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
This is in an attempt to identify how many regressions were introduced within a minor release - this regression was introduced after a major release (3.5 -> 3.6).

Relevant bibisect below (not sure if important any more but adding anyways)

 d4e5de64a12fda97ddf41abfe21232584724ff8c is the first bad commit
commit d4e5de64a12fda97ddf41abfe21232584724ff8c
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Thu Dec 20 04:49:35 2012 +0000

    source-hash-3e2b8624ea5d7d4af5d81bcfea21531f22c181c9
    
    commit 3e2b8624ea5d7d4af5d81bcfea21531f22c181c9
    Author:     Petr Mladek <pmladek@suse.cz>
    AuthorDate: Wed Jul 4 15:51:27 2012 +0200
    Commit:     Petr Mladek <pmladek@suse.cz>
    CommitDate: Wed Jul 4 15:51:27 2012 +0200
    
        Version 3.6.0.0.beta3, tag libreoffice-3.6.0.0.beta3
    
        Change-Id: Ifc19e31979ca4e7b65149e48fe4be12cf42fd858

:100644 100644 d644d80d3fc617c5d0f94a1ac59bf783bd253899 2c81808a1d7621511a4b892a6536b84f88073488 M	ccache.log
:100644 100644 08213ba1779e4f8312c9764e98d7aae520b63bbc 5455f93259f9eb57672eb43a85b1a0f4f7cd6802 M	commitmsg
:100644 100644 4dd2490c6561849c257367df6c3c1924ee066c4a 961c0070b63be454053be6f98aa0a990a74264d8 M	dev-install.log
:100644 100644 0c699d304f1590482938ec6ed813c20a4842e8c2 adcd70739c3fbec1301c1c38573df82e0d844b05 M	make.log
:040000 040000 2b0d0f1858a9676d58fac179f4b8e5b43fb6648d 42b89b68536361f7ccbf4a71c3d88b3ce9465c65 M	opt




# bad: [db3c86493be22ba530f04ab0e8f55e18635be70d] source-hash-0db40b4672fb9714d9e5dbe12615fa511463d9f7
# good: [2645643c52c718588b6ead3fbc8c1a2af94da492] source-hash-63fcc49425922aa49e4b718824c6adddeb35e414
git bisect start 'newest' 'oldest'
# good: [f191fce024eb488503c3378c24417755a8ab91b8] source-hash-1f1cdd8c2b95679fb969ca60caa96541c4dbeb34
git bisect good f191fce024eb488503c3378c24417755a8ab91b8
# bad: [4d5ca74005de59bf30014859e802201ec81b5d39] source-hash-ba822cc9d9a3642ed45e6617157a5a7b895ed6ae
git bisect bad 4d5ca74005de59bf30014859e802201ec81b5d39
# bad: [a9124b8d707d5a955abfdba88e32869b6cf33cc8] source-hash-61d5034173d5bb5b97dbdc082b0a6e6a0027c33b
git bisect bad a9124b8d707d5a955abfdba88e32869b6cf33cc8
# bad: [d4e5de64a12fda97ddf41abfe21232584724ff8c] source-hash-3e2b8624ea5d7d4af5d81bcfea21531f22c181c9
git bisect bad d4e5de64a12fda97ddf41abfe21232584724ff8c
# good: [a22fa18b07c911d3456ad82efc3d9d2129991025] source-hash-f010139cbeb65d6c6a375a45d44cd6cbc1360e05
git bisect good a22fa18b07c911d3456ad82efc3d9d2129991025
Comment 11 Joshua Augustin 2013-04-28 19:05:36 UTC
The patch appears to work.
It opened fine for me in LODev 3.6.7.0+, build id 562de76, on my Ubuntu 12.04 LTS box. (It's just some letterhead for Florida Recreation and Park Association.)