fdo#55289: fix crash in SwXShape::setPropertyValue:

In the libreoffice-3-6 branch the docx import crashes here when setting
the anchor position of a shape, because the previous setting of the
AnchorType was not done properly: the position of the anchor in the
SwFmt did not match the actual position of the text attribute, so we get
these assertions: "Missing FlyInCnt-Hint." and crash.

This cannot be reproduced with the docx import on master, because on
master a different intermediate AnchorType is set, and transitioning
from that happens not to cause the crash.  But it can be reproduced with
a unit test.

The regression was introduced in libreoffice-3-6 with
backport commit bbbb10a0774b9da546557632cd09c4f6958f8939.

Change-Id: I394643e11862543177ba57958a26cd8ce06dc09c
(cherry picked from commit 01cd24df1ec7eaa53e9e2156d4d6890a7cc5996a)
Reviewed-on: https://gerrit.libreoffice.org/1264
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>